--- a/_posts/2012-08-27-cfbag.md
+++ b/_posts/2012-08-27-cfbag.md
@@ -6,6 +6,7 @@ ref: "https://developer.apple.com/library/mac/#documentation/CoreFOundation/Refe
 framework: CoreFoundation
 rating: 7.2
 published: true
+description: In the pantheon of collection data types in computer science, bag doesn't really have the same clout as lists, sets, associative arrays, trees, graphs, or priority queues. In fact, it's pretty obscure. You've probably never heard of it.
 ---
 
 Objective-C is a language caught between two worlds. 
