--- a/_posts/2012-08-27-cfbag.md
+++ b/_posts/2012-08-27-cfbag.md
@@ -11,7 +11,7 @@ description: In the pantheon of collection data types in computer science, bag d
 
 Objective-C is a language caught between two worlds. 
 
-On one side, it follows the thoughtful, object-oriented philosophy of [Smalltalk](http://en.wikipedia.org/wiki/Smalltalk), which brings ideas like message sending and named parameters. On the other, are the inescapable vestiges of [C](http://en.wikipedia.org/wiki/C_(programming_language) "C Programming Language"), which brings with it power with a dash of chaos.
+On one side, it follows the thoughtful, object-oriented philosophy of [Smalltalk](http://en.wikipedia.org/wiki/Smalltalk), which brings ideas like message sending and named parameters. On the other, are the inescapable vestiges of <a href="http://en.wikipedia.org/wiki/C_(programming_language)">C</a>, which brings with it power with a dash of chaos.
 
 It's an identity crisis borne out through an ever-increasing prevalence of the `@` symbol.
 
@@ -95,7 +95,7 @@ Take a look at the second row, with `NSCountedSet` and `CFBag`. Notice that unli
 
 ## Bags, in the Abstract
 
-In the [pantheon of collection data types](http://en.wikipedia.org/wiki/Collection_(abstract_data_type) "Collection Data Types") in computer science, bag doesn't really have the same clout as lists, sets, associative arrays, trees, graphs, or priority queues. 
+In the <a href="http://en.wikipedia.org/wiki/Collection_(abstract_data_type)">pantheon of collection data types</a> in computer science, bag doesn't really have the same clout as lists, sets, associative arrays, trees, graphs, or priority queues. 
 
 In fact, it's pretty obscure. You've probably never heard of it.
 
