--- a/_posts/2012-08-27-cfbag.md
+++ b/_posts/2012-08-27-cfbag.md
@@ -11,7 +11,7 @@ description: In the pantheon of collection data types in computer science, bag d
 
 Objective-C is a language caught between two worlds. 
 
-On one side, it follows the thoughtful, object-oriented philosophy of [Smalltalk](http://en.wikipedia.org/wiki/Smalltalk), which brings ideas like message sending and named parameters. On the other, are the inescapable vestiges of <a href="http://en.wikipedia.org/wiki/C_(programming_language)">C</a>, which brings with it power with a dash of chaos.
+On one side, it follows the thoughtful, object-oriented philosophy of [Smalltalk](http://en.wikipedia.org/wiki/Smalltalk), which brings ideas like message sending and named parameters. On the other, are the inescapable vestiges of <a href="http://en.wikipedia.org/wiki/C_(programming_language)">C</a>, which brings it power and a dash of chaos.
 
 It's an identity crisis borne out through an ever-increasing prevalence of the `@` symbol.
 
