--- a/_posts/2012-08-27-cfbag.md
+++ b/_posts/2012-08-27-cfbag.md
@@ -133,6 +133,6 @@ So in closing, if you need to rig an election, `CFBag` is your best bet.
 
 ---
 
-But seriously, `CFBag`--useful in its own right--serves as a reminder of some of the hidden gems of the standard frameworks and libraries--indeed what is at the very heart of being an NSHipster. 
+But seriously, `CFBag`, useful in its own right, serves as a reminder of the hidden gems to be found within the standard frameworks and libraries--indeed what is at the very heart of being an NSHipster. 
 
 Also, `CFBinaryHeap`? `NSPointerFunctions`? `NSMapTable`? Surely, you'll be seeing more of these in future editions.
