--- a/_posts/2012-09-03-nslocale.md
+++ b/_posts/2012-09-03-nslocale.md
@@ -86,7 +86,7 @@ While this all may seem like fairly esoteric stuff, you may be surprised by the 
 It's the small things, like knowing that quotation marks vary between locales:
 
 > English: “I can eat glass, it doesn't harm me.”  
-> French: „Ich kann Glas essen, das tut mir nicht weh.“  
+> German: „Ich kann Glas essen, das tut mir nicht weh.“  
 > Japanese:「私はガラスを食べられます。それは私を傷つけません。」  
 
 So if you were building a component that added quotations around arbitrary text, you should use `NSLocaleQuotationBeginDelimiterKey` and `NSLocaleAlternateQuotationEndDelimiterKey` rather than assuming `@"\""` for English quotation marks.
