Fixing typo about NSInputStream subclass

--- a/2012-10-01-pragma.md
+++ b/2012-10-01-pragma.md
@@ -52,7 +52,7 @@ Use `#pragma mark` in your `@implementation` to divide code into logical section
 
 ![Xcode Sections](http://nshipster.s3.amazonaws.com/pragma-xcode-sections.png)
 
-If your class conforms to any `@protocols`, start by grouping all of the methods within each protocol together, and adding a `#pragma mark` header with the name of that protocol. Another good convention is to group subclassed methods according to their respective superclass. For example, an `NSInputStream` subclass should have a group marked `NSInputStream`, followed by a group marked `NSInputStream`. Things like `IBAction` outlets, or methods corresponding to target / action, notification, or KVO selectors probably deserve their own sections as well.
+If your class conforms to any `@protocols`, start by grouping all of the methods within each protocol together, and adding a `#pragma mark` header with the name of that protocol. Another good convention is to group subclassed methods according to their respective superclass. For example, an `NSInputStream` subclass should have a group marked `NSInputStream`, followed by a group marked `NSStream`. Things like `IBAction` outlets, or methods corresponding to target / action, notification, or KVO selectors probably deserve their own sections as well.
 
 Your code should be clean enough to eat off of. So take the time to leave your `.m` files better than how you found them.
 
