--- a/_posts/2012-10-01-pragma.md
+++ b/_posts/2012-10-01-pragma.md
@@ -74,7 +74,7 @@ But sometimes there's no avoiding compiler warnings. Deprecation notices and ret
         };
     #pragma clang diagnostic pop
 
-This code sample [from AFNetworking](https://github.com/AFNetworking/AFNetworking/blob/master/AFNetworking/AFHTTPRequestOperation.m#L247) is an example of an otherwise unavoidable warning from the static analyzer. Clang notices a strong reference to `self` within the block, and warns about a possible [retain cycle](http://www.quora.com/What-is-a-retain-cycle). However, the `super` implementation of `setCompletionBlock` takes care of this by `nil`-ing out the strong reference after the completion block is finished.
+This code sample [from AFNetworking](https://github.com/AFNetworking/AFNetworking/blob/master/AFNetworking/AFHTTPRequestOperation.m#L247) (contributed by [Peter Steinberger](https://github.com/steipete)) is an example of an otherwise unavoidable warning from the static analyzer. Clang notices a strong reference to `self` within the block, and warns about a possible [retain cycle](http://www.quora.com/What-is-a-retain-cycle). However, the `super` implementation of `setCompletionBlock` takes care of this by `nil`-ing out the strong reference after the completion block is finished.
 
 Fortunately, Clang provides a convenient way to get around all of this. Using `#pragma clang diagnostic push/pop`, you can tell the compiler to ignore certain warnings, _only_ for a particular section of code (the original diagnostic settings are restored with the final `pop`).
 
