Updating article content and formatting

--- a/2012-08-27-cfbag.md
+++ b/2012-08-27-cfbag.md
@@ -109,15 +109,17 @@ As an implementation of the bag data type, `CFBag` and its mutable counterpart, 
 
 Although it lacks the object-oriented convenience of `NSCountedSet`, it makes up for it with a number of ways to customize its behavior. When `CFBag` is created, it can be initialized with a number of callbacks, defined by the `CFBagCallBacks` struct, which specify the way values are inserted, removed, and compared:
 
-    struct CFBagCallBacks {
-       CFIndex version;
-       CFBagRetainCallBack retain;
-       CFBagReleaseCallBack release;
-       CFBagCopyDescriptionCallBack copyDescription;
-       CFBagEqualCallBack equal;
-       CFBagHashCallBack hash;
-    };
-    typedef struct CFBagCallBacks CFBagCallBacks;
+~~~{objective-c}
+struct CFBagCallBacks {
+   CFIndex version;
+   CFBagRetainCallBack retain;
+   CFBagReleaseCallBack release;
+   CFBagCopyDescriptionCallBack copyDescription;
+   CFBagEqualCallBack equal;
+   CFBagHashCallBack hash;
+};
+typedef struct CFBagCallBacks CFBagCallBacks;
+~~~
 
 - `retain`: callback used to retain values as they're added to the collection
 - `release`: callback used to release values as they're removed from the collection
