--- a/2012-10-01-pragma.md
+++ b/2012-10-01-pragma.md
@@ -18,35 +18,37 @@ Code organization is a matter of hygiene. How you structure your code is a refle
 
 Good habits start with `#pragma mark`. Like so:
 
-    @implementation ViewController
+~~~{objective-c}
+@implementation ViewController
 
-    - (id)init {
-      ...
-    }
+- (id)init {
+  ...
+}
 
-    #pragma mark - UIViewController
+#pragma mark - UIViewController
 
-    - (void)viewDidLoad {
-      ...
-    }
+- (void)viewDidLoad {
+  ...
+}
 
-    #pragma mark - IBAction
+#pragma mark - IBAction
 
-    - (IBAction)cancel:(id)sender {
-      ...
-    }
+- (IBAction)cancel:(id)sender {
+  ...
+}
 
-    #pragma mark - UITableViewDataSource
+#pragma mark - UITableViewDataSource
 
-    - (NSInteger)tableView:(UITableView *)tableView numberOfRowsInSection:(NSInteger)section {
-      ...
-    }
+- (NSInteger)tableView:(UITableView *)tableView numberOfRowsInSection:(NSInteger)section {
+  ...
+}
 
-    #pragma mark - UITableViewDelegate
+#pragma mark - UITableViewDelegate
 
-    - (void)tableView:(UITableView *)tableView didSelectRowAtIndexPath:(NSIndexPath *)indexPath {
-      ...
-    }
+- (void)tableView:(UITableView *)tableView didSelectRowAtIndexPath:(NSIndexPath *)indexPath {
+  ...
+}
+~~~
 
 Use `#pragma mark` in your `@implementation` to divide code into logical sections. Not only do these sections make it easier to read through the code itself, but it also adds visual cues to the Xcode source navigator (`#pragma mark` declarations starting with a dash (`-`) are preceded with a horizontal divider). 
 
@@ -66,13 +68,15 @@ You know what's even more annoying than poorly-formatted code? Code that generat
 
 But sometimes there's no avoiding compiler warnings. Deprecation notices and retain-cycle false positives are two common situations where this might happen. In those rare cases where you are _absolutely_ certain that a particular compiler or static analyzer warning should be inhibited, `#pragma` comes to the rescue:
 
-    // completionBlock is manually nilled out in AFURLConnectionOperation to break the retain cycle.
-    #pragma clang diagnostic push
-    #pragma clang diagnostic ignored "-Warc-retain-cycles"
-        self.completionBlock = ^ {
-            ...
-        };
-    #pragma clang diagnostic pop
+~~~{objective-c}
+// completionBlock is manually nilled out in AFURLConnectionOperation to break the retain cycle.
+#pragma clang diagnostic push
+#pragma clang diagnostic ignored "-Warc-retain-cycles"
+    self.completionBlock = ^ {
+        ...
+    };
+#pragma clang diagnostic pop
+~~~
 
 This code sample [from AFNetworking](https://github.com/AFNetworking/AFNetworking/blob/master/AFNetworking/AFHTTPRequestOperation.m#L247) (contributed by [Peter Steinberger](https://github.com/steipete)) is an example of an otherwise unavoidable warning from the static analyzer. Clang notices a strong reference to `self` within the block, and warns about a possible [retain cycle](http://www.quora.com/What-is-a-retain-cycle). However, the `super` implementation of `setCompletionBlock` takes care of this by `nil`-ing out the strong reference after the completion block is finished.
 
