--- a/2013-01-07-nil.md
+++ b/2013-01-07-nil.md
@@ -3,12 +3,11 @@ layout: post
 title: "nil / Nil / NULL / NSNull"
 
 ref: "https://developer.apple.com/library/mac/#documentation/Cocoa/Conceptual/NumbersandValues/Articles/Null.html"
+framework: Foundation
 published: true
 ---
 
 Understanding the concept of nothingness is as much a philosophical issue as it is a pragmatic one. We are inhabitants of a universe of _somethings_, yet reason in a logical universe of existential uncertainties. As a physical manifestation of a logical system, computers are faced with the intractable problem of how to represent _nothing_ with _something_.
-
----
 
 In Objective-C, there are several different varieties of _nothing_. The reason for this goes back to [a common NSHipster refrain](http://nshipster.com/ns_enum-ns_options/), of how Objective-C bridges the procedural paradigm of C with Smalltalk-inspired object-oriented paradigm.
 
@@ -28,11 +27,13 @@ Perhaps the most notable behavior of `nil`, though, is that it can have messages
 
 In other languages, like C++, this would crash your program, but in Objective-C, invoking a method on `nil` returns a zero value. This greatly simplifies expressions, as it obviates the need to check for `nil` before doing anything:
 
-    // For example, this expression...
-    if (name != nil && [name isEqualToString:@"Steve"]) { ... }
+~~~{objective-c}
+// For example, this expression...
+if (name != nil && [name isEqualToString:@"Steve"]) { ... }
 
-    // ...can be simplified to:
-    if ([name isEqualToString:@"steve"]) { ... }
+// ...can be simplified to:
+if ([name isEqualToString:@"steve"]) { ... }
+~~~
 
 Being aware of how `nil` works in Objective-C allows this convenience to be a feature, and not a lurking bug in your application. Make sure to guard against cases where `nil` values are unwanted, either by checking and returning early to fail silently, or adding a `NSParameterAssert` to throw an exception.
 
@@ -40,13 +41,15 @@ Being aware of how `nil` works in Objective-C allows this convenience to be a fe
 
 `NSNull` is used throughout Foundation and other frameworks to skirt around the limitations of collections like `NSArray` and `NSDictionary` not being able to contain `nil` values. You can think of `NSNull` as effectively [boxing][1] the `NULL` or `nil` value so that it can be used in collections:
 
-    NSMutableDictionary *mutableDictionary = [NSMutableDictionary dictionary];
+~~~{objective-c}
+NSMutableDictionary *mutableDictionary = [NSMutableDictionary dictionary];
 
-    mutableDictionary[@"someKey"] = nil; // Removes value for `someKey`
-    NSLog(@"Keys: %@", [mutableDictionary allKeys]); // @[]
+mutableDictionary[@"someKey"] = nil; // Removes value for `someKey`
+NSLog(@"Keys: %@", [mutableDictionary allKeys]); // @[]
 
-    mutableDictionary[@"someKey"] = [NSNull null]; // Sets value of NSNull singleton for `someKey`
-    NSLog(@"Keys: %@", [mutableDictionary allKeys]); // @[@"someKey"]
+mutableDictionary[@"someKey"] = [NSNull null]; // Sets value of NSNull singleton for `someKey`
+NSLog(@"Keys: %@", [mutableDictionary allKeys]); // @[@"someKey"]
+~~~
 
 ---
 
