Minor changes to NSLocale article

--- a/2012-09-03-nslocale.md
+++ b/2012-09-03-nslocale.md
@@ -6,10 +6,10 @@ ref: "https://developer.apple.com/library/mac/#documentation/Cocoa/Reference/Fou
 framework: Foundation
 rating: 9.0
 published: true
-description: "Internationalization is the dental flossing of app development: everyone knows they should do it, but probably don't."
+description: "Internationalization is like flossing: everyone knows they should do it, but probably don't."
 ---
 
-Internationalization is the dental flossing of app development: everyone knows they should do it, but probably don't. 
+Internationalization is like flossing: everyone knows they should do it, but probably don't. 
 
 And like any habit, it becomes second-nature with practice, to the point that you couldn't imagine _not_ doing it. All it takes is for someone to show you the way. 
 
