<del>True Story</del>, because that wasn't entirely obvious

--- a/2013-01-28-nsvalue.md
+++ b/2013-01-28-nsvalue.md
@@ -6,10 +6,10 @@ ref: "https://developer.apple.com/library/mac/#documentation/Cocoa/Reference/Fou
 framework: Foundation
 rating: 6.0
 published: true
-description: "Boxing is the process of encapsulating scalars (`int`, `double`, `BOOL`, etc.) and value types (`struct`, `enum`) with an object container, and is primarily used to store those values in collection objects—namely arrays and dictionaries. In Foundation, the reigning featherweight champion of boxing is `NSValue`."
+description: "Boxing is the process of encapsulating scalars and value types with an object container, and is primarily used to store those values in collection objects—namely arrays and dictionaries. In Foundation, the reigning featherweight champion of boxing is NSValue."
 ---
 
-As part of playing the role of Abraham Lincoln in the [eponymous 2012 biopic](http://www.imdb.com/title/tt0443272/), Daniel Day-Lewis would insist on walking through a refrigerator box marked "TIME MACHINE" anytime he entered or left the set. [True Story](http://filmdrunk.uproxx.com/2012/10/daniel-day-lewis-method-acting-lincoln-ny-times-profile).
+As part of playing the role of Abraham Lincoln in the [eponymous 2012 biopic](http://www.imdb.com/title/tt0443272/), Daniel Day-Lewis would insist on walking through a refrigerator box marked "TIME MACHINE" anytime he entered or left the set. <del markdown="1">[True Story](http://filmdrunk.uproxx.com/2012/10/daniel-day-lewis-method-acting-lincoln-ny-times-profile)</del>.
 
 While the ends certainly justify the means when it comes to Mr. Day-Lewis' method acting, one can't help but marvel at the absurdity of a magical cardboard box used as a nexus between the modern and historical worlds.
 
@@ -77,4 +77,4 @@ But now you're in the know. You won't be stifled by such pedestrian concerns. Yo
 
 ---
 
-Having unpacked all of this wisdom about `NSValue`, you can now face that cruel divide between procedural and object-oriented; C and Smalltalk; old and new. Because everything is easy with a magic box.
+Having unpacked all of this wisdom about `NSValue`, you can now face that cruel divide between procedural and object-oriented; C and Smalltalk. Because everything is easy with a magic box.
