--- a/2013-01-28-nsvalue.md
+++ b/2013-01-28-nsvalue.md
@@ -42,7 +42,7 @@ While boxing is an admittedly dry subject matter, there are two methods in parti
 
 > `@encode()`: Returns the [type encoding](http://developer.apple.com/library/mac/#documentation/Cocoa/Conceptual/ObjCRuntimeGuide/Articles/ocrtTypeEncodings.html) of a type. This type value can be used as the first argument encode in `NSCoder -encodeValueOfObjCType:at`.
 
-The subject of type encodings would make for a great article of its own, but the main takeaway is that it serves as a terse, human-readable representation of the structure of a type. For example,
+The subject of type encodings would make for [a great article of its own](http://nshipster.com/type-encodings/), but the main takeaway is that it serves as a terse, human-readable representation of the structure of a type. For example,
 
 ~~~{objective-c}
 typedef struct example {
