Fixing some egregious grammatical mistakes in NSCache post

--- a/2012-07-14-nscache.md
+++ b/2012-07-14-nscache.md
@@ -7,7 +7,7 @@ framework: Foundation
 rating: 7.5
 ---
 
-Poor `NSCache`, always being overshadowed by `NSMutableDictionary` in the most inappropriate circumstances. It's like no one knows its there, ready to provide all of that garbage collection behavior that developers take great pains to re-implement themselves.
+Poor `NSCache`, always being overshadowed by `NSMutableDictionary`. It's as if no one knew it was there, ready to provide all of that garbage collection behavior that developers take great pains to re-implement themselves.
 
 That's right: `NSCache` is basically just an `NSMutableDictionary` that automatically evicts objects in order to free up space in memory as needed. No need to respond to memory warnings or contrive a cache-clearing timer mechanism. The only other difference is that keys aren't copied as they are in an `NSMutableDictionary`, which is actually to its advantage (no need for keys to conform to `<NSCopying>`). If developers only knew...
 
