BRTableViewController -> UITableViewController /thanks @jszumski

--- a/2013-03-04-backrow.md
+++ b/2013-03-04-backrow.md
@@ -54,7 +54,7 @@ Here's a brief list of some Back Row classes & protocols and their UIKit equival
     </tr>
     <tr>
       <td><tt>BRMenuController</tt></td>
-      <td><tt>BRTableViewController</tt></td>
+      <td><tt>UITableViewController</tt></td>
     </tr>
     <tr>
       <td><tt>BRControllerStack</tt></td>
