Adding ticks around LATVLeaseAgent

--- a/2013-03-04-backrow.md
+++ b/2013-03-04-backrow.md
@@ -105,7 +105,7 @@ Here are some of the more interesting parts of the Back Row framework headers (a
 
 - [`BRURLImageProxy`](http://appletv.ericiii.net/5.2/protocol_b_r_image_proxy-p.php): A protocol that encapsulates the process of loading and displaying images at various dimensions.
 - [`BRKeyboard`](http://appletv.ericiii.net/5.2/interface_b_r_keyboard.php): It's always fascinating to see how Apple architects controls. Keyboards populate and manage interactions with the grid view of character and action keys, and are divided into classes for Roman and Japanese scripts.
-- [`BRStateMachine`](http://appletv.ericiii.net/5.2/interface_b_r_state_machine.php): No other Apple frameworks expose a class for state machines. [LATVLeaseAgent](http://appletv.ericiii.net/5.2/interface_l_t_a_v_lease_agent.php) is a subclass in the `AppleTV` framework that appears to negotiate the terms of iTunes movie rentals.
+- [`BRStateMachine`](http://appletv.ericiii.net/5.2/interface_b_r_state_machine.php): No other Apple frameworks expose a class for state machines. [`LATVLeaseAgent`](http://appletv.ericiii.net/5.2/interface_l_t_a_v_lease_agent.php) is a subclass in the `AppleTV` framework that appears to negotiate the terms of iTunes movie rentals.
 - [`BRMappingDictionary`](http://appletv.ericiii.net/5.2/interface_b_r_mapping_dictionary.php): A new and useful-looking collection class that functions as an `NSMutableDictionary`, but also allows for an `NSValueTransformer` to be set for each key (`-transformedValueForKey:forObject:` in addition to `-valueForKey:`)
 - [`BRMerchant`](http://appletv.ericiii.net/5.2/interface_b_r_merchant.php): What you might expect in terms of a class representing a store client, with some [interesting class methods](http://appletv.ericiii.net/5.2/interface_b_r_merchant.php#pub-static-methods). `itms` is in reference to the iTunes Music Store, but what's `sedona` and `flagstaff`? They're probably codewords for streaming services that fall under the umbrella of the iTunes store.
 - [`<BRControlFactory>`](http://appletv.ericiii.net/5.2/protocol_b_r_control_factory-p.php) [`<BRMetadataPopulator>`](http://appletv.ericiii.net/5.2/protocol_b_r_metadata_populator-p.php) & [`BRControlMediator`](http://appletv.ericiii.net/5.2/interface_b_r_control_mediator.php): Factories, Populators, and Mediators are not commonly seen design patterns in Apple frameworks, although they are described in the [Cocoa Fundamentals Guide](https://developer.apple.com/library/mac/#documentation/cocoa/conceptual/CocoaFundamentals/CocoaDesignPatterns/CocoaDesignPatterns.html).
