Un-breaking @0xced's <3

--- a/2013-03-04-backrow.md
+++ b/2013-03-04-backrow.md
@@ -12,7 +12,7 @@ For years, many have predicted the announcement of an Apple TV SDK. We all know 
 
 Everything is in place for Apple to kick-start the next generation of television, completely leap-frogging the current, pathetic crop of "smart TVs" like the iPhone did with its "smart phone" predecessors. All they need to do is open up the ecosystem.
 
-But rather than simply wait for the future, we can take matters into our own hands, with [class-dump-z](http://code.google.com/p/networkpx/downloads/detail?name=class-dump-z) and some reverse-engineering chutzpah.
+But rather than simply wait for the future, we can take matters into our own hands, with [class-dump](https://github.com/nygard/class-dump) and some reverse-engineering chutzpah.
 
 Voila! [A class dump of the Apple TV private framework headers](http://appletv.ericiii.net/5.2/annotated.php) 
 
