--- a/2013-03-04-backrow.md
+++ b/2013-03-04-backrow.md
@@ -24,7 +24,7 @@ Back Row is a private framework used in the Apple TV user experience. Its name i
 
 The original Apple TV could be described as a "short Mac Mini", which ran a modified version of Front Row on a stripped-down build of Mac OS X. It was little more than an iTunes remote, streaming content from a shared iTunes library on a separate computer.
 
-The second generation of the device took a smaller form factor, shifting its focus from media storage and management to on-demand streaming. The second generation Apple TV user interface reflected this in both its design and implementation. BackRow was ported from OS X to iOS, as it transcended its original roll coordinating iTunes libraries to become an extensible platform for streaming media appliances.
+The second generation of the device took a smaller form factor, shifting its focus from media storage and management to on-demand streaming. The second generation Apple TV user interface reflected this in both its design and implementation. BackRow was ported from OS X to iOS, as it transcended its original role coordinating iTunes libraries to become an extensible platform for streaming media appliances.
 
 ## Back Row & UIKit
 
