--- a/2013-04-08-bool.md
+++ b/2013-04-08-bool.md
@@ -32,7 +32,7 @@ if ([a isEqual:b] == YES) {
 }
 ~~~
 
-Not only is this unnecessary, but depending on the left-hand value, it may also cause unexpected results, as described in this [Big Nerd Ranch's blog post "BOOL's Sharp Edges"](http://blog.bignerdranch.com/564-bools-sharp-corners/):
+Not only is this unnecessary, but depending on the left-hand value, it may also cause unexpected results, as described in this [Big Nerd Ranch blog post "BOOL's Sharp Edges"](http://blog.bignerdranch.com/564-bools-sharp-corners/):
 
 ~~~{objective-c}
 static BOOL different (int a, int b) {
