--- a/2013-04-08-bool.md
+++ b/2013-04-08-bool.md
@@ -88,7 +88,7 @@ The answer:
 
 Wait, what?
 
-All this time, we've been lead to believe that `NSNumber` [boxes](http://nshipster.com/nsvalue/) primitives into an object representation. Any other integer- or float-derived `NSNumber` object shows its class to be `__NSCFNumber`. What gives?
+All this time, we've been led to believe that `NSNumber` [boxes](http://nshipster.com/nsvalue/) primitives into an object representation. Any other integer- or float-derived `NSNumber` object shows its class to be `__NSCFNumber`. What gives?
 
 `NSCFBoolean` is a private class in the `NSNumber` [class cluster](http://nshipster.com/nsorderedset/). It is a bridge to the [`CFBooleanRef` type](https://developer.apple.com/library/mac/#documentation/CoreFoundation/Reference/CFBooleanRef/Reference/reference.html), which is used to wrap boolean values for Core Foundation property lists and collections. `CFBoolean` defines the constants `kCFBooleanTrue` and `kCFBooleanFalse`. Because `CFNumberRef` and `CFBooleanRef` are different types in Core Foundation, it makes sense that they are represented by different bridging classes in `NSNumber`.
 
