Use keychain to store credentials

--- a/2013-05-13-nscoding.md
+++ b/2013-05-13-nscoding.md
@@ -169,7 +169,7 @@ An `NSCoding`-backed table view controller might, for instance, set its collecti
 
 Each app has its own database of user preferences, which can store and retrieve any `NSCoding`-compatible object or C value.
 
-While it is not advisable to store an entire object graph into `NSUserDefaults`, it can be useful to encode compound objects, such as API credentials or "current user" objects in this way.
+While it is not advisable to store an entire object graph into `NSUserDefaults`, it can be useful to encode compound objects in this way, such as "current user" objects <del>or API credentials</del> <ins>(use <a href="https://developer.apple.com/library/mac/#documentation/security/Conceptual/keychainServConcepts/iPhoneTasks/iPhoneTasks.html">Keychain</a> instead)</ins>.
 
 #### Archiving
 
