Adding Core Data Libraries & Utilities article

--- a/2013-05-13-nscoding.md
+++ b/2013-05-13-nscoding.md
@@ -17,7 +17,7 @@ When it comes to modeling, querying, traversing and persisting complex object gr
 
 A fair and common comparison of Core Data to `NSKeyedArchiver` might go something like this:
 
-<table class="core-data-versus-nskeyedarchiver">
+<table id="figure-1" class="core-data-versus-nskeyedarchiver">
   <thead>
     <tr>
       <th></th>
@@ -63,7 +63,7 @@ Et cetera. In a heads-up, apples to apples comparison, it looks rather one-sided
 
 ...that is, until you look at it from a slightly different perspective:
 
-<table class="core-data-versus-nskeyedarchiver">
+<table id="figure-2" class="core-data-versus-nskeyedarchiver">
   <thead>
     <tr>
       <th></th>
