Fixed typos in the ReactiveCocoa and NSCoding articles.

--- a/2013-05-13-nscoding.md
+++ b/2013-05-13-nscoding.md
@@ -84,7 +84,7 @@ Et cetera. In a heads-up, apples to apples comparison, it looks rather one-sided
   </tbody>
 </table>
 
-By these measure, `NSKeyedArchiver` becomes a perfectly reasonable choice in certain situations. Not all apps need to query data. Not all apps need automatic migrations. Not all apps work with large or complex object graphs. And even apps that do may have certain components better served by a simpler solution.
+By these measures, `NSKeyedArchiver` becomes a perfectly reasonable choice in certain situations. Not all apps need to query data. Not all apps need automatic migrations. Not all apps work with large or complex object graphs. And even apps that do may have certain components better served by a simpler solution.
 
 This article will look at the how's, when's, and why's of `NSKeyedArchiver` and `NSCoding`. And with this understanding, hopefully provide you, dear reader, with the wisdom to choose the best tool for the job.
 
