Fix typos in second paragraph

--- a/2013-08-12-random.md
+++ b/2013-08-12-random.md
@@ -9,7 +9,7 @@ description: "What passes for randomness is merely a hidden chain of causality. 
 
 What passes for randomness is merely a hidden chain of causality.  In a mechanical universe of material interactions expressed in mathematical equations, it is unclear whether nature encodes an element of chance, or if it's a uniquely human way to reconcile uncertainty. This much is true, at least: in the closed, digital universe of CPU cycles, processes, and threads, there is no true randomness, only _pseudorandomness_.
 
-Pseudorandomness, is often implemented in a way very similar to a [cryptographic hash](http://en.wikipedia.org/wiki/Cryptographic_hash_function), as a deterministic function that returns a value based on the current time (salted, of course, by some initial seed value). Also like hash functions, there are a number of <acronym>PRNG</acronym>, or pseudorandom number generators, each of with optimizing for particular performance characteristics: uniformity, periodicity, and computational complexity.
+Pseudorandomness is often implemented similarly to a [cryptographic hash](http://en.wikipedia.org/wiki/Cryptographic_hash_function), as a deterministic function that returns a value based on the current time (salted, of course, by some initial seed value). Also like hash functions, there are a number of <acronym>PRNG</acronym>, or pseudorandom number generators, each of which optimize for particular performance characteristics: uniformity, periodicity, and computational complexity.
 
 Of course, for app developers, all of this is an academic exercise. And rather than bore you with any more high-minded, long-winded treatises on the philosophical nature of randomness, we're going to tackle this one FAQ-style.
 
