Minor copy editing

--- a/2013-08-12-random.md
+++ b/2013-08-12-random.md
@@ -7,7 +7,11 @@ published: true
 description: "What passes for randomness is merely a hidden chain of causality. Of course, app developers could care less about philosophy—what they want is code. Thus, our goal this week: to clear up all of the lingering questions and misunderstandings about doing random things in Objective-C"
 ---
 
-What passes for randomness is merely a hidden chain of causality.  In a mechanical universe of material interactions expressed in mathematical equations, it is unclear whether nature encodes an element of chance, or if it's a uniquely human way to reconcile uncertainty. This much is true, at least: in the closed, digital universe of CPU cycles, processes, and threads, there is no true randomness, only _pseudorandomness_.
+What passes for randomness is merely a hidden chain of causality.
+
+In a mechanical universe of material interactions expressed through mathematical equations, it is unclear whether nature encodes an element of chance, or if it's a uniquely human way to reconcile uncertainty.
+
+We can be sure of one thing, however: in the closed, digital universe of CPU cycles, processes, and threads, there is no true randomness, only _pseudorandomness_.
 
 Pseudorandomness, is often implemented in a way very similar to a [cryptographic hash](http://en.wikipedia.org/wiki/Cryptographic_hash_function), as a deterministic function that returns a value based on the current time (salted, of course, by some initial seed value). Also like hash functions, there are a number of <acronym>PRNG</acronym>, or pseudorandom number generators, each of with optimizing for particular performance characteristics: uniformity, periodicity, and computational complexity.
 
@@ -19,11 +23,9 @@ Our goal this week: to clear up all of the lingering questions and misunderstand
 
 ## How Do I Generate a Random Number in Objective-C?
 
-_tl;dr_: **Use `arc4random(3)` and its related functions.**
+_tl;dr_: **Use `arc4random()` and its related functions.**
 
-> C functions are typically denoted with a number `3` inside of parentheses, following the organizational convention of [`man` pages](http://en.wikipedia.org/wiki/Man_page#Manual_sections).
-
-Specifically, to generate a random number between `0` and `N`, use `arc4random_uniform(3)`, which avoids [modulo bias](http://eternallyconfuzzled.com/arts/jsw_art_rand.aspx).
+Specifically, to generate a random number between `0` and `N`, use `arc4random_uniform()`, which avoids [modulo bias](http://eternallyconfuzzled.com/arts/jsw_art_rand.aspx).
 
 ### Random `int` between `0` and `N`
 
@@ -36,8 +38,6 @@ NSUInteger r = arc4random_uniform(N);
 ~~~{objective-c}
 NSUInteger r = arc4random_uniform(N - 1) + 1;
 ~~~
-
->> `arc4random_uniform()` will return a uniformly distributed random number less than upper_bound. arc4random_uniform() is recommended over constructions like ``arc4random() % upper_bound'' as it avoids "modulo bias" when the upper bound is not a power of two.
 
 ### Random `double` between `0` and `1`
 
@@ -101,6 +101,8 @@ NSString *letter = [vowels substringWithRange:NSMakeRange(arc4random_uniform([vo
 ~~~
 
 ## Why Should I Use `arc4random(3)` instead of `rand(3)` or `random(3)`?
+
+> C functions are typically denoted with a number `3` inside of parentheses, following the organizational convention of [`man` pages](http://en.wikipedia.org/wiki/Man_page#Manual_sections).
 
 - `arc4random` does not require an initial seed (with `srand` or `srandom`), making it that much easier to use.
 - `arc4random` has a range up to `0x100000000 (4294967296)`, whereas `rand` and `random` top out at `RAND_MAX = 0x7fffffff (2147483647)`.
