Correcting off-by-one error for arc4random_uniform /thanks @tempelmann

--- a/2013-08-12-random.md
+++ b/2013-08-12-random.md
@@ -25,9 +25,9 @@ Our goal this week: to clear up all of the lingering questions and misunderstand
 
 _tl;dr_: **Use `arc4random()` and its related functions.**
 
-Specifically, to generate a random number between `0` and `N`, use `arc4random_uniform()`, which avoids [modulo bias](http://eternallyconfuzzled.com/arts/jsw_art_rand.aspx).
+Specifically, to generate a random number between `0` and `N - 1`, use `arc4random_uniform()`, which avoids [modulo bias](http://eternallyconfuzzled.com/arts/jsw_art_rand.aspx).
 
-### Random `int` between `0` and `N`
+### Random `int` between `0` and `N - 1`
 
 ~~~{objective-c}
 NSUInteger r = arc4random_uniform(N);
@@ -36,7 +36,7 @@ NSUInteger r = arc4random_uniform(N);
 ### Random `int` between `1` and `N`
 
 ~~~{objective-c}
-NSUInteger r = arc4random_uniform(N - 1) + 1;
+NSUInteger r = arc4random_uniform(N) + 1;
 ~~~
 
 ### Random `double` between `0` and `1`
