--- a/2013-08-12-random.md
+++ b/2013-08-12-random.md
@@ -68,7 +68,7 @@ NSUInteger count = [mutableArray count];
 // See http://en.wikipedia.org/wiki/Fisher–Yates_shuffle
 if (count > 1) {
   for (NSUInteger i = count - 1; i > 0; --i) {
-      [mutableArray exchangeObjectAtIndex:i withObjectAtIndex:arc4random_uniform((int32_t)i)];
+      [mutableArray exchangeObjectAtIndex:i withObjectAtIndex:arc4random_uniform((int32_t)(i + 1))];
   }
 }
 
