Adding section about NSString equality. /thanks @tjernlund

--- a/2013-08-26-equality.md
+++ b/2013-08-26-equality.md
@@ -89,7 +89,25 @@ The following `NSObject` subclasses in Foundation have custom equality implement
 
 When comparing two instances of any of these classes, one is encouraged to use these high-level methods rather than `isEqual:`.
 
-However, our theoretical implementation is yet incomplete. Let's turn our attention now to `hash`:
+However, our theoretical implementation is yet incomplete. Let's turn our attention now to `hash` (after a quick detour to clear something up about `NSString`:
+
+### The Curious Case of `NSString` Equality
+
+As an interesting aside, consider the following:
+
+~~~{objective-c}
+NSString *a = @"Hello";
+NSString *b = @"Hello";
+BOOL wtf = (a == b); // YES
+~~~
+
+Let it be perfectly clear that the correct way to compare `NSString` objects is to use `-isEqualToString:`. **Under no circumstances should you compare `NSString` with the `==` operator.**
+
+So what's going on here? Why does this work, when the same code for `NSArray` or `NSDictionary` literals wouldn't work?
+
+It all has to do with an optimization technique known as [string interning](http://en.wikipedia.org/wiki/String_interning), whereby one copy of immutable string value is copied for each distinct value. `NSString *a` and `*b` point to the same copy of the interned string value `@"Hello"`. _Note that this only works for _immutable_ strings._
+
+Interestingly enough, Objective-C selector names are also stored as interned strings in a shared string pool. `themoreyouknow.gif`.
 
 ## Hashing
 
