Using explicit class names in -isEqual: implementations /thanks @mikeash

--- a/2013-08-26-equality.md
+++ b/2013-08-26-equality.md
@@ -63,7 +63,7 @@ Here's an idea of how `NSArray` might do this:
     return YES;
   }
 
-  if (![object isKindOfClass:[self class]]) {
+  if (![object isKindOfClass:[NSArray class]]) {
     return NO;
   }
 
@@ -107,7 +107,7 @@ So what's going on here? Why does this work, when the same code for `NSArray` or
 
 It all has to do with an optimization technique known as [string interning](http://en.wikipedia.org/wiki/String_interning), whereby one copy of immutable string value is copied for each distinct value. `NSString *a` and `*b` point to the same copy of the interned string value `@"Hello"`. _Note that this only works for _immutable_ strings._
 
-Interestingly enough, Objective-C selector names are also stored as interned strings in a shared string pool. `themoreyouknow.gif`.
+Interestingly enough, Objective-C selector names are also stored as interned strings in a shared string pool. `themoreyouknow.gif`. 
 
 ## Hashing
 
@@ -187,7 +187,7 @@ Bringing it all together, here's how one might override the default equality imp
     return YES;
   }
 
-  if (![[object class] isKindOfClass:[self class]]) {
+  if (![[object class] isKindOfClass:[Person class]]) {
     return NO;
   }
 
