Fixing calculation of RGB components (forgot 0.0-1.0 for CGFloat) /thanks @mikeash

--- a/2013-08-26-equality.md
+++ b/2013-08-26-equality.md
@@ -151,7 +151,7 @@ For a `UIColor`, a bit-shifted sum of RGB components is a convenient calculation
 - (NSUInteger)hash {
   CGFloat red, green, blue;
   [color getRed:&red green:&green blue:&blue alpha:nil];
-  return ((NSUInteger)red << 16) + ((NSUInteger)green << 8) + blue;
+  return ((NSUInteger)(red * 255) << 16) + ((NSUInteger)(green * 255) << 8) + (NSUInteger)(blue * 255);
 }
 @end
 ~~~
