Miscellaneous corrections and fixes

--- a/2013-08-26-equality.md
+++ b/2013-08-26-equality.md
@@ -40,7 +40,7 @@ Subclasses of `NSObject` implementing their own `isEqual:` method are expected t
 - Override `isEqual:` to make class and object identity checks, falling back on the aforementioned value comparison method.
 - Override `hash`, which will be described in the next section.
 
-Here's an idea of how `NSArray` might do this:
+Here's an idea of how `NSArray` might do this (ignoring, for this example, that as a [class cluster](https://developer.apple.com/library/ios/documentation/general/conceptual/CocoaEncyclopedia/ClassClusters/ClassClusters.html), the actual implementation would be significantly more complicated):
 
 ~~~{objective-c}
 @implementation NSArray (Approximate)
@@ -107,7 +107,9 @@ So what's going on here? Why does this work, when the same code for `NSArray` or
 
 It all has to do with an optimization technique known as [string interning](http://en.wikipedia.org/wiki/String_interning), whereby one copy of immutable string value is copied for each distinct value. `NSString *a` and `*b` point to the same copy of the interned string value `@"Hello"`. _Note that this only works for _immutable_ strings._
 
-Interestingly enough, Objective-C selector names are also stored as interned strings in a shared string pool. `themoreyouknow.gif`. 
+Interestingly enough, Objective-C selector names are also stored as interned strings in a shared string pool. 
+
+`themoreyouknow.gif`. 
 
 ## Hashing
 
@@ -177,7 +179,10 @@ Bringing it all together, here's how one might override the default equality imp
     return NO;
   }
 
-  return [self.name isEqualToString:person.name] && [self.birthday isEqualToDate:person.birthday];
+  BOOL haveEqualNames = (!self.name && !person.name) || [self.name isEqualToString:person.name];
+  BOOL haveEqualBirthdays = (!self.birthday && !person.birthday) || [self.birthday isEqualToDate:person.birthday];
+
+  return haveEqualNames && haveEqualBirthdays;
 }
 
 #pragma mark - NSObject
@@ -187,7 +192,7 @@ Bringing it all together, here's how one might override the default equality imp
     return YES;
   }
 
-  if (![[object class] isKindOfClass:[Person class]]) {
+  if (![[Person class] isKindOfClass:[object class]]) {
     return NO;
   }
 
